--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,12 +10,17 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.3.1"
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.310",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
